# echaim

./: .readthedocs.yaml  pyproject.toml
Release_C-3.2.4/: The Empirical Canadian High Arctic Ionospheric Model - Primer.docx
Release_C-3.2.4/CMake/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
Release_C-3.2.4/CMake/.cmake/api/v1/reply/: cache-v2-934f3190c111961527fa.json  cmakeFiles-v1-cacfc0f2b5afad2183b9.json  codemodel-v2-e416cbfa62b2862f4ff3.json  index-2022-09-07T16-09-38-0626.json
Release_C-3.2.4/lib/: ECHAIM.h  aacgmlib_v2.c  astalglib.c  densityProfile.c  errorCodes.c  getFIRI.c  python_api.c  singleOutput.c  updateLocalDB.c
docs/: conf.py  index.rst  installation.rst  overview.rst  reference.rst  refs.bib  requirements.txt
docs/user_guide/: dens_path.rst  dens_profile1.rst  dens_profile2.rst  hmf21.rst  index.rst  nmf2.rst
examples/: density_path.py  density_prof_1.py  density_prof_2.py  hmf2_hmf1.py  nmf2.py
source/echaim/: test.py
source/source_c/CMake/: CMakeCache.txt  CMakeLists.txt  ECHAIM.cbp  Makefile  cmake_install.cmake
source/source_c/CMake/.cmake/api/v1/reply/: target-ECHAIM-Debug-30108d66d5815ca5f4e5.json  target-ECHAIM_User-Debug-5973db6cc9c8c6fe55d4.json
source/source_c/etc/: PRECIP_DB.db
source/source_c/lib/: ECHAIM.h  densityPath.c  densityProfile.c  getCoefs.c  getDir.c  getDir.h  getIndices.c  python_api.c
src/echaim/: density_profile.py  echaim.py  single_output.py
src/echaim/model_data/: COEFS_DB.db
src/echaim/source_c/: CMakeLists.txt
src/echaim/source_c/lib/: ECHAIM.h  python_api.c  sqlite3.h
src/echaim/source_c/source_docs/: ECHAIM_User
tests/: test_echaim.py
